<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="andrescaicedo.petagramrestapisincronizado.AcercaDe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include android:id="@+id/miActionBar"
        layout="@layout/layout_action_bar"> </include>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/acercaDe"
        android:textSize="20sp"
        android:textStyle="bold"
        style="@style/Widget.AppCompat.Button.Colored"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCuentaPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center"
            android:foregroundGravity="center"
            android:gravity="center_horizontal|center"
            android:text="@string/tvCuentaPrincipal"
            android:textSize="@dimen/sizeCuenta"
            android:textStyle="bold|italic"
            />

        <TextView
            android:id="@+id/txtCuentaPrin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center"
            android:foregroundGravity="center"
            android:gravity="center_horizontal|center"
            android:text="@string/tvCuentaPrin"
            android:textSize="@dimen/sizeTextView" />

        <TextView
            android:id="@+id/txtDesarrollado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:foregroundGravity="center"
            android:gravity="center_horizontal|center"
            android:text="@string/tvNombre"
            android:textSize="@dimen/sizeCuenta"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtNombreDesarrollador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDesarrollado"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center"
            android:foregroundGravity="center"
            android:gravity="center_horizontal|center"
            android:text="@string/tvDesarrollador"
            android:textSize="@dimen/sizeTextView" />

    </LinearLayout>