<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="andrescaicedo.petagramrestapisincronizado.ContactoForEmail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include android:id="@+id/miActionBar"
            layout="@layout/layout_action_bar"> </include>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/Correo"
            android:textSize="20sp"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Colored"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilPara">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietPara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_de"
                android:textStyle="bold"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilAsunto">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietAsunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_nombre"
                android:textStyle="bold"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilMensaje">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_descripcion"
                android:textStyle="bold"
                android:inputType="textPostalAddress"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo_send"
            android:onClick="mandarCorreo"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center"
            android:elevation="4dp"/>

    </LinearLayout>

</ScrollView>